infra/k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  ports:
    - port: 3000
  selector:
    app: web
